--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/bsktcase/poketriever#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "chalk": "^1.1.3",
     "clear": "0.0.1",
     "commander": "^2.9.0",
     "figlet": "^1.2.0",
+    "googleapis": "^18.0.0",
     "inquirer": "^3.0.6",
     "pogobuf": "^1.10.0"
   },
