--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "figlet": "^1.2.0",
     "googleapis": "^18.0.0",
     "inquirer": "^3.0.6",
+    "moment": "^2.18.1",
     "pogobuf": "^1.10.0"
   },
   "devDependencies": {
