--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,10 @@
         "no-console": "off",
         "indent": [
             "error",
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
