--- a/package.json
+++ b/package.json
@@ -20,15 +20,23 @@
   },
   "homepage": "https://github.com/bsktcase/poketriever#readme",
   "dependencies": {
+    "@nodert-win10/windows.devices.geolocation": "^0.2.96",
     "bluebird": "^3.5.0",
     "chalk": "^1.1.3",
     "clear": "0.0.1",
     "commander": "^2.9.0",
+    "debug": "^2.6.8",
+    "es5-ext": "^0.10.22",
+    "external-editor": "^2.0.4",
     "figlet": "^1.2.0",
+    "glob": "^7.1.2",
     "googleapis": "^18.0.0",
+    "ignore": "^3.3.3",
     "inquirer": "^3.0.6",
     "moment": "^2.18.1",
-    "pogobuf-vnext": "^2.0.1"
+    "pogobuf-vnext": "^2.1.0",
+    "readable-stream": "^2.2.10",
+    "safe-buffer": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
