--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "googleapis": "^22.2.0",
     "ignore": "^3.3.7",
     "inquirer": "^3.3.0",
-    "moment": "^2.19.3",
+    "moment": "^2.20.1",
+    "pogobuf-signature": "^2.3.11",
     "pogobuf-vnext": "^2.5.7",
     "readable-stream": "^2.3.3",
     "safe-buffer": "^5.1.1"
   },
   "devDependencies": {
-    "eslint": "^4.13.0",
+    "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1"
   }
 }
